formatteed message timestamps, added username, aligned the messages boxes correctly

--- a/src/components/messages/styles.module.scss
+++ b/src/components/messages/styles.module.scss
@@ -4,7 +4,8 @@
   height: 90%;
   display: flex;
   flex-direction: column;
-  gap: var(--margin-md);
+  align-items: flex-end;
+  gap: var(--margin-lg);
   overflow-y: auto;
   scrollbar-color: var(--text-muted) var(--bg-dark);
   scrollbar-width: thin;
