--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -23,7 +23,7 @@
   justify-content: flex-start;
   height: 100dvh;
   width: 100dvw;
-  background: linear-gradient(180deg, var(--bg-light) 20%, var(--bg-dark) 80%);
+  background: linear-gradient(180deg, var(--bg-light) 5%, var(--bg-dark) 80%);
 }
 
 .titleContainer{
